@@ -1,3 +1,12 @@
+2007-02-06  Dave Nomura <dcnltc@us.ibm.com>
+
+	* libpp/symbol.h:
+	* libutil++/Makefile.am:
+	* libutil++/sparse_array.h: represent count_array_t as a sparse 
+	  array type based on std::map rather than growable_vector which is
+	  based on std::vector to reduce the excessive heap usage on large
+	  profiles.
+
 2007-02-02  Amitabha Roy  <amitabha.roy@gmail.com>
 
 	* daemon/opd_anon.c:
